# algorithms-in-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: data_structs.rs  lib.rs  main.rs  search.rs  sorting.rs  visualize.rs
tests/: integration_tests.rs
